[package]
name = "cassini"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust library for controlling Elegoo Saturn printers over SDCP"

[lib]
name = "cassini"
path = "src/lib.rs"

[dependencies]
futures-util = "0.3"
md5 = "0.7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
